WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63626
[Chromium][Regression
r89939
] Crash on selected text copy.
https://bugs.webkit.org/show_bug.cgi?id=63626
Summary
[Chromium][Regression r89939] Crash on selected text copy.
Pavel Feldman
Reported
2011-06-29 07:25:51 PDT
Exception on "Copy" invocation: WebCore::Node::getFlag() at Node.h:624 0x7ffff3a59891 WebCore::Node::isElementNode() at Node.h:192 0x7ffff3a5b2b3 WebCore::Node::hasTagName() at Element.h:453 0x7ffff3a684da WebKit::pluginContainerFromNode() at WebFrameImpl.cpp:291 0x7ffff3a5db76 WebKit::WebFrameImpl::executeCommand() at WebFrameImpl.cpp:1,138 0x7ffff3a60a0d RenderView::OnCopy() at render_view.cc:875 0x7ffff4ef43b2 IPC::Message::Dispatch<RenderView, RenderView>() at ipc_message.h:136 0x7ffff4f05452 RenderView::OnMessageReceived() at render_view.cc:598 0x7ffff4ef2556 MessageRouter::RouteMessage() at message_router.cc:46 0x7ffff39dde38 MessageRouter::OnMessageReceived() at message_router.cc:38 0x7ffff39dddda
Attachments
Patch
(1.25 KB, patch)
2011-06-29 10:28 PDT
,
James Hawkins
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Hawkins
Comment 1
2011-06-29 10:28:12 PDT
Created
attachment 99112
[details]
Patch
James Hawkins
Comment 2
2011-06-29 10:46:55 PDT
Fixed in
r90025
. I accidentally cut off webkit-patch land before it updated the bug.
Eric Seidel (no email)
Comment 3
2011-12-21 14:29:40 PST
Attachment 99112
[details]
was posted by a committer and has review+, assigning to James Hawkins for commit.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug