2011-06-29  James Hawkins  <jhawkins@chromium.org>

Reviewed by Pavel Feldman.

        [Chromium] Fix a crash on when executeCommand(copy) is called on a null node.
        https://bugs.webkit.org/show_bug.cgi?id=63626

        * src/WebFrameImpl.cpp:
        (WebKit::pluginContainerFromNode):


Canonical link: https://commits.webkit.org/79307@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90025 268f45cc-cd09-0410-ab3c-d52691b4dbfc